# Openai_Agents_SDK_Projects

./: .gitignore  README.md  replacements.txt
1_agent_basic_configs/agents_configs/: .gitignore  hello.py  pyproject.toml
1_agent_basic_configs/agents_configs/src/: agent_level.py  global_level.py  run_level.py
2_shopping_agent_chainlit_v1/: .gitignore
2_shopping_agent_chainlit_v1/src/shopping_agent/: check_path.py  shopping_agents.py
3_shopping_agent_chainlit_v2/: .gitignore  pyproject.toml
chainlit_shopping_agent/: app.py  requirements.txt
chainlit_shopping_agent/src/chainlit_shopping_agent/: __init__.py  config_agents.py  shopping_agents.py  tools.py
multi_agent_scraper/: .env  .gitignore  app.py  config_agent.py  hello.py  html_structure.py  main.py  pyproject.toml  scrape_shopify_json.py
multi_agent_scraper/multi_agents/: aggregator_agent.py  main_agent.py  scraper_agent.py  uploader_agent.py
multi_agent_scraper/tools/: scrape_tool.py  scrape_tool.text
project_0/: .gitignore  README.md  run_level.py
project_0/agents_configs/: .env
project_0/agents_configs/src/: agent_level.py  run_level.py
project_1/book_writer/: pyproject.toml
project_1/book_writer/src/book_writer/: __init__.py
project_2/: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
project_2/src/shopping_agent/: .env  __init__.py  check_path.py  config_agents.py  models.py  shopping_agents.py  tools.py
shopify-scraper/: .gitignore  app.py  pyproject.toml
shopify-scraper/src/shopify_scraper/: guardrail_agents.text  single_agent.py
shopify-scraper/src/shopify_scraper/test/: test_format.py  test_googlesheet.py
shopify-scraper/src/shopify_scraper/tools/: save_to_google.py  shopify_scrapper.py
single_agent_scraper/: gc.json  main.py  pyproject.toml
single_agent_scraper/src/single_agent_scraper/: .gitignore  __init__.py  config_agent.py  multi_agents.py  single_agent.py
single_agent_scraper/src/single_agent_scraper/test/: test_googsheet.py
single_agent_scraper/src/single_agent_scraper/tools/: save_to_google.py
src/project_0/: agent_level.py  global_level.py
web_scraper_agent/: .env  pyproject.toml
web_scraper_agent/src/web_scraper_agent/: __init__.py  config_agent.py  load_env_var.py
web_scraper_agent/src/web_scraper_agent/tools/: scrape_tool.py  test_sheets.py
