[project]
name = "chainlit-shopping-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saqibmurtaza", email = "saqibmurtazakhan@gmai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.2.0",
    "openai-agents>=0.0.12",
]

[project.scripts]
chainlit-shopping-agent = "chainlit_shopping_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
