[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saqibmurtaza", email = "saqibmurtazakhan@gmai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.6",
    "gspread>=6.2.0",
    "chainlit>=2.4.400",
]

[project.scripts]
project-2 = "shopping_agent.shopping_agents:main"

[tool.hatch.build]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_agent"]
