[project]
name = "shopify-scraper"
version = "0.1.0"
description = "Shopify scraper with Chainlit and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chainlit>=2.5.5",
    "google-generativeai>=0.8.5",
    "gspread>=6.2.0",
    "hatchling>=1.27.0",
    "literalai==0.1.201",
    "oauth2client>=4.1.3",
    "openai-agents>=0.0.14",
    "requests>=2.32.3",
    "selenium>=4.32.0",
]

[project.scripts]
shopify = "shopify_scraper.single_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shopify_scraper"]

