[project]
name = "web-scraper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saqibmurtaza", email = "saqibmurtazakhan@gmai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-generativeai>=0.8.4",
    "gspread>=6.2.0",
    "hatchling>=1.27.0",
    "oauth2client>=4.1.3",
    "openai-agents>=0.0.10",
    "requests>=2.32.3",
]

[project.scripts]
web-scraper-agent = "web_scraper_agent.agent_runner:main"

[tool.hatch.build]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_scraper_agent"]
